# jaxscat

./: .flake8  .gitignore  .readthedocs.yml  README.md  README_2.md  noxfile.py  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: constraints.txt  labeler.yml  release.yml  tests.yml
docs/: conf.py  index.md  reference.md  requirements.txt
src/calcite/: __init__.py  _gauss.py  _util.py  pad.py  periodize.py
src/calcite/scatter/: __init__.py  real2d.py  util.py
src/calcite/wavelet/: __init__.py  cake.py  gabor.py  triglet.py
src/jaxscat/: _gauss.py
src/jaxscat/scatter/: fourier.py  fourier2d.py  real2d.py  util.py
src/jaxscat/wavelet/: cake.py  gabor.py  morlet.py  solid.py
