[tool.poetry]
name = "jaxscat"
version = "0.1.0"
description = "Scattering transform"
authors = ["Matt Black <mb46@princeton.edu>"]
license = "GPLv3"
readme = "README.md"
homepage = "https://github.com/matt-black/jaxscat"
repository = "https://github.com/matt-black/jaxscat"
documentation = "https://jaxscat.readthedocs.io"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
]

[tool.poetry.urls]
Changelog = "https://github.com/matt-black/jaxscat/releases"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
numpy = ">=1.24.0"
jax = {extras = ["cuda12"], version = "^0.4.37"}
jaxtyping = "^0.2.36"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"

[tool.poetry.group.dev.dependencies]
Pygments = ">=2.10.0"
black = ">=21.10b0"
coverage = {extras = ["toml"], version = ">=6.2"}
darglint = ">=1.8.1"
flake8 = ">=4.0.1"
flake8-bandit = ">=2.1.2"
flake8-bugbear = ">=21.9.2"
flake8-docstrings = ">=1.6.0"
flake8-rst-docstrings = ">=0.2.5"
furo = ">=2021.11.12"
isort = ">=5.10.1"
mypy = ">=0.930"
pep8-naming = ">=0.12.1"
pre-commit = ">=2.16.0"
pre-commit-hooks = ">=4.1.0"
pytest = ">=6.2.5"
pyupgrade = ">=2.29.1"
sphinx = ">=4.3.2"
sphinx-autobuild = ">=2021.3.14"
sphinx-click = ">=3.0.2"
typeguard = ">=2.13.3"
xdoctest = {extras = ["colors"], version = ">=0.15.10"}
myst-parser = {version = ">=0.16.1"}
ipykernel = "^6.29.5"
poetry-plugin-export = "^1.8.0"
myst-nb = "^1.1.2"
jupyterlab = "^4.3.3"
ipympl = "^0.9.4"
kymatio = "^0.3.0"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["jaxscat", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
